--- a/langs/panel.xml
+++ b/langs/panel.xml
@@ -48,9 +48,6 @@ Links
     <message id='menu.licence'>
 Licence
     </message>
-    <message id='menu.error'>
-Error
-    </message>
     <message id='menu.gm.panel'>
 GM Panel
     </message>
@@ -475,7 +472,7 @@ Hardware:<br/>
 </ul><br/>
 For new players:<br/>
 <ul>
-    <li>Registration: <a href="#/account"><font color="#00FF00">Available</font></a></li>
+    <li>Registration: <a href="#/register"><font color="#00FF00">Available</font></a></li>
     <li>realmlist: set realmlist logon.hellground.pl</li>
     <li>Patch: The Burning Crusade (TBC 2.4.3)</li>
     <li>Emulator: TrinityCore + <a href="http://wowen.hellground.pl/changelog/">own fixes</a></li>
@@ -594,6 +591,9 @@ Name
     </message>
     <message id='general.state'>
 State
+    </message>
+    <message id='general.error'>
+Error
     </message>
 
     <message id='ip.current'>
@@ -741,10 +741,29 @@ Typed password is too short
 Typed password is too long
     </message>
     <message id='error.validation.login'>
-Wrong input data
+Wrong input login data.<br/>
+Minimal account data requirements:<br/><br/>
+Login must:
+<ul>
+    <li>have at least 6 signs</li>
+    <li>have up to 16 signs</li>
+    <li>contain letters, numbers or signs: - _ </li>
+</ul><br/><br/>
+Password must have:
+<ul>
+    <li>at least 6 signs</li>
+    <li>up to 16 signs</li>
+</ul>
     </message>
     <message id='error.validation.recovery'>
-Wrong input data
+Wrong recovery data.<br/>
+Login must:
+<ul>
+    <li>have at least 6 signs</li>
+    <li>have up to 16 signs</li>
+    <li>contain letters, numbers or signs: - _ </li>
+</ul><br/><br/>
+In email field must be email address.
     </message>
     <message id='error.teleport.online'>
 Character must be OFFLINE to use teleport option
@@ -755,7 +774,7 @@ Character not found !
     <message id='error.ip.mistach'>
 Account where you tried to login has IP lock enabled and your current IP doesn't match to account IP.<br/><br/>
 
-If it's your account please use <a href="#/password">password recovery</a> option to reset password and IP lock.
+If it's your account please use <a href="#/recover">password recovery</a> option to reset password and IP lock.
     </message>
     <message id='error.vote.multiple'>
 You can't vote on that list yet.
@@ -788,6 +807,9 @@ DB Error: Database query error
 
     <message id='realm.informations.hellground'>
 <a href="http://en.hellground.pl/how-to-play" target="_blank"><font color="#ffdf81">How to play - info</font></a>
+    </message>
+    <message id='realm.informations.ptr'>
+
     </message>
 
     <message id='locale.enus'>
