move global functions to namespaces Misc::* update year in copyrights

--- a/langs/panel.xml
+++ b/langs/panel.xml
@@ -646,7 +646,7 @@ Character {1} restored
 
     <message id='licence.intro'>
 HG Players Panel - web panel for HellGround server Players<br/>
-Copyright (C) 2011 HellGround Team : Siof, lukaasm,<br/><br/>
+Copyright (C) 2011-2012 HellGround Team : Siof, lukaasm,<br/><br/>
 
 This program is free software: you can redistribute it and/or modify<br/>
 it under the terms of the GNU Affero General Public License version 3 as<br/>
