--- a/langs/panel_pl.xml
+++ b/langs/panel_pl.xml
@@ -686,7 +686,7 @@ Postać {1} odzyskana
 
     <message id='licence.intro'>
 HG Players Panel - webowy panel projektu HellGround<br/>
-Copyright (C) 2011 HellGround Team : Siof, lukaasm,<br/><br/>
+Copyright (C) 2011-2012 HellGround Team : Siof, lukaasm,<br/><br/>
 
 Ten program stanowi wolne oprogramowanie: możesz je rozpowszechniać<br/>
 i/lub modyfikować na warunkach GNU Affero Powszechnej Licencji<br/>
