fix loading indicator

--- a/langs/panel.xml
+++ b/langs/panel.xml
@@ -636,6 +636,9 @@ State
     <message id='general.error'>
 Error
     </message>
+    <message id='general.loading'>
+Loading ...
+    </message>
 
     <message id='ip.current'>
 Current IP
