--- a/langs/panel_pl.xml
+++ b/langs/panel_pl.xml
@@ -119,6 +119,9 @@ Ekwipunek
     <message id='character.tab.fiends'>
 Znajomi
     </message>
+    <message id='character.tab.mails'>
+Maile
+    </message>
     <message id='character.deletion.date'>
 Data usunięcia postaci
     </message>
